--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ function MM_swapImage() { //v3.0
     <td height="5" align="left" valign="top">&nbsp;</td>
     <td height="5" align="left" valign="top"><table width="790" border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td width="518" align="left" valign="top"><p class="style2">No apples in 2016! We lost our plum and apple crop due to a late frost, but we do have Summercrisp and Patten pears available from the farm, $3/pound, 3 pound minimum order. <a href="mailto:Info@TheElmTreeFarm.com" target="_blank" class="style2">Send us an email!</a></p>
+        <td width="518" align="left" valign="top"><p class="style2"> <a href="mailto:Info@TheElmTreeFarm.com" target="_blank" class="style2">Send us an email!</a></p>
           <p class="Footer"><a href="index.html">Email us: </a><a href="mailto:Info@TheElmTreeFarm.com">Info@TheElmTreeFarm.com</a><br />
             &copy;2016, The Elm Tree Farm. All rights reserved.<br />
             <br />
