--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@ function MM_swapImage() { //v3.0
           <table width="363" border="0" cellspacing="0" cellpadding="0">
             <tr>
               <td width="25" align="left" valign="top">&nbsp;</td>
-              <td align="left" valign="top"><p class="BodyCopy"><span class="style2">No apples in 2016! We lost our plum and apple crop due to a late frost, but we do have Summercrisp and Patten pears available from the farm, $3/pound, 3 pound minimum order. Send us an email!</span><br />
+              <td align="left" valign="top"><p class="BodyCopy"><span class="style2">Send us an email!</span><br />
             </p>
 <p class="style2">&nbsp;</p>
 
@@ -158,7 +158,7 @@ Elm Tree Farm is located in Afton, Minnesota. If you'd like to visit, or learn m
 <p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p>
 </iframe>
 
-<p><a class="footerLink13" href="http://www.123contactform.com" title="Html form">Html form</a> <span class="Footer">powered by 123ContactForm.com</span> | <a class="footerLink13" title="Looks like phishing? Report it!" href="http://www.123contactform.com/sf.php?s=123contactform-52&control119314=http://www.123contactform.com/contact-form--424161.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p><!-- 123ContactForm.com script ends here -->
+<p><a class="footerLink13" href="http://www.123contactform.com" title="Html form">Html form</a> <span class="Footer">powered by 123ContactForm.com</span>Â |Â <a class="footerLink13" title="Looks like phishing? Report it!" href="http://www.123contactform.com/sf.php?s=123contactform-52&control119314=http://www.123contactform.com/contact-form--424161.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p><!-- 123ContactForm.com script ends here -->
 
               </div>
               </td>
