--- a/theelmtree.html
+++ b/theelmtree.html
@@ -115,7 +115,7 @@ function MM_swapImage() { //v3.0
           <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
             <span class="BodyCopy"><br />
             Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
-          <p><a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!</a></p>
+          <p>The <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">&quot;St. Croix Elm&quot;</a>is now propagated through Bailey's Nurseries and available to order at local garden stores!</p>
           <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
