--- a/theelmtree.html
+++ b/theelmtree.html
@@ -114,12 +114,10 @@ function MM_swapImage() { //v3.0
         <td width="726" align="left" valign="top"><p>&nbsp;</p>
           <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
             <span class="BodyCopy"><br />
-            Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
-          <p>The <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">&quot;St. Croix Elm&quot;</a>is now propagated through Bailey's Nurseries and available to order at local garden stores!</p>
-          <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
+         <p>The <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">&quot;St. Croix Elm&quot;</a>is now propagated through Bailey's Nurseries and available to order at local garden stores!</p>
+		    <p><img src="images/BrownDividerBar.jpg" width="725"/></p>
         <td width="34" align="left" valign="top">&nbsp;</td>
-      </tr>
-    </table>
+     
               <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank"> Star Tribune</a><br />
 May 5, 2009<br />
 <br />
