--- a/theelmtree.html
+++ b/theelmtree.html
@@ -52,7 +52,6 @@ function MM_preloadImages() { //v3.0
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
     if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
 }
-
 function MM_findObj(n, d) { //v4.01
   var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
     d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
@@ -60,7 +59,6 @@ function MM_findObj(n, d) { //v4.01
   for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
   if(!x && d.getElementById) x=d.getElementById(n); return x;
 }
-
 function MM_swapImage() { //v3.0
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
@@ -114,15 +112,12 @@ function MM_swapImage() { //v3.0
         <td width="726" align="left" valign="top"><p>&nbsp;</p>
           <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
             <span class="BodyCopy"><br />
-	   Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
- -          <p>The <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">&quot;St. Croix Elm&quot;</a>is now propagated through Bailey's Nurseries and available to order at local garden stores!</p>
- -          <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
- +         <p>The <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">&quot;St. Croix Elm&quot;</a>is now propagated through Bailey's Nurseries and available to order at local garden stores!</p>
- +		    <p><img src="images/BrownDividerBar.jpg" width="725"/></p>
-          <td width="34" align="left" valign="top">&nbsp;</td>
- -      </tr>
- -    </table>
-     
+            Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
+          <p><a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!</a></p>
+          <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
+        <td width="34" align="left" valign="top">&nbsp;</td>
+      </tr>
+    </table>
               <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank"> Star Tribune</a><br />
 May 5, 2009<br />
 <br />
