--- a/theelmtree.html
+++ b/theelmtree.html
@@ -118,7 +118,7 @@ function MM_swapImage() { //v3.0
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
     </table>
-              <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank"> Star Tribune</a><br />
+              <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank"> Star Tribune</a><br />
 May 5, 2009<br />
 <br />
                 <br />
