--- a/theelmtree.html
+++ b/theelmtree.html
@@ -111,18 +111,17 @@ function MM_swapImage() { //v3.0
         <td width="30" align="left">&nbsp;</td>
         <td width="726" align="left" valign="top"><p>&nbsp;</p>
           <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
-            <span class="BodyCopy"><br />
-            Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
+           
           <p><a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!</a></p>
           <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
     </table>
-              <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank"> Star Tribune</a><br />
-May 5, 2009<br />
+              <p class="BodyCopy"><strong>Article by KIM PALMER,<br />
+May 26, 2015<br />
 <br />
                 <br />
-                COULD AN OLD ELM BE THE NEXT BIG THING?<br />
+                <a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank">Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a><br />
                 <br />
               </strong> In the search for new disease-resistant elm species, some of the hottest prospects are homegrown.<br />
 <br />
