--- a/theelmtree.html
+++ b/theelmtree.html
@@ -117,32 +117,15 @@ function MM_swapImage() { //v3.0
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
     </table>
-              <p class="BodyCopy"><strong>Article by KIM PALMER,<br />
-May 26, 2015<br />
-<br />
+            <br />
                 <br />
-                <a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank">Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a><br />
+                <p class="BodyCopy"><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank">Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a>Article by Kim Palmer<br />
                 <br />
-              </strong> In the search for new disease-resistant elm species, some of the hottest prospects are homegrown.<br />
-<br />
-Over at the University of Minnesota, they're torturing baby elms in pursuit of tomorrow's shade tree -- the one you're going to want on your boulevard in a few years.</p>
-              <p class="BodyCopy">The elms are lab grown seedlings, cloned from Minnesota trees that show resistance to Dutch Elm Disease (DED). And the torture involves testing that resistance to the max. Researchers drill holes in the base, fill the holes with a lab concocted culture of Dutch Elm fungus, cover the holes with tape -- and wait.</p>
-              <p class="BodyCopy">"It's pretty effective. It kills the susceptible ones pretty quickly," said U plant pathologist Benjamin Held.</p>
-              <p class="BodyCopy">But some seedlings survive. They appear to succumb initially, wilting and dropping leaves, just like their sickly full-grown cousins, the trees that end up with blaze-orange rings painted around their trunks. But the toughest seedlings recover. Those are the elms that will undergo further testing in the field, in hopes of eventually introducing a new, Minnesota-native landscape tree that can withstand the ravages of DED.                </p>
-              <p class="BodyCopy">Disease-resistant elms are a hot topic in plant research and development circles.</p>
-              <p class="BodyCopy">"There's a lot of interest," said Chad Giblin, a U horticultural scientist. "The American elm is really important to Minnesotans. Many people grew up seeing streets lined with elms, then they were gone. People are very nostalgic about elms."</p>
-              <p class="BodyCopy">After DED wiped out entire neighborhoods of trees in the 1970s, green ash became a popular alternative. But now that a new scourge, the emerald ash borer, has been spotted near the Minnesota/Wisconsin border, the search for disease resistant shade trees has gained urgency.</p>
-              <p class="BodyCopy">"We're trending back to disease-resistant American elms," said Mark Stennes, plant pathologist/arborist for S&S Tree Specialists in St. Paul. "In terms of size, shape and grandeur, there really is no substitute for the American elm."</p>
-              <p class="Footer"><a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank">To read the full article, click here. </a></p>
-<p>&nbsp;</p></td>
-          </tr>
-        </table></td>
         <td width="40" align="left" valign="top">&nbsp;</td>
         <td width="365" align="right" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
-        </tr>
-  </table></td>
+      
     <td align="left" valign="top" background="images/about_18.jpg">&nbsp;</td>
-  </tr>
+  
   <tr>
     <td width="64" height="5" align="left" valign="top"><img src="images/home_25.jpg" width="64" height="5" /></td>
     <td height="5" align="left" valign="top"><img src="images/home_26.jpg" width="790" height="5" /></td>
