--- a/theelmtree.html
+++ b/theelmtree.html
@@ -122,7 +122,7 @@ function MM_swapImage() { //v3.0
                 <p class="style2"><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank">Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a>  Article by Kim Palmer<br />
                 <br />
         <td width="40" align="left" valign="top">&nbsp;</td>
-        <td width="365" align="right" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
+        <td width="365" align="center" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
       
     <td align="left" valign="top" background="images/about_18.jpg">&nbsp;</td>
   
