--- a/theelmtree.html
+++ b/theelmtree.html
@@ -119,7 +119,7 @@ function MM_swapImage() { //v3.0
     </table>
             <br />
                 <br />
-                <p class="style2"><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank">Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a>  Article by Kim Palmer<br />
+                <p><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank" class="style2"> Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a>  Article by Kim Palmer<br />
                 <br />
         <td width="40" align="left" valign="top">&nbsp;</td>
         <td width="365" align="center" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
