--- a/theelmtree.html
+++ b/theelmtree.html
@@ -117,12 +117,14 @@ function MM_swapImage() { //v3.0
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
     </table>
+	    <td width="30" align="left">&nbsp;</td>
+        <td width="726" align="left" valign="top"><p>&nbsp;</p>
             <br />
                 <br />
-                <p><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank" class="style2"> Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a>  Article by Kim Palmer<br />
+                <p><a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank" class="style2"> Disease-resistant St. Croix elm making its way to Twin Cities garden centers</a><br />
                 <br />
         <td width="40" align="left" valign="top">&nbsp;</td>
-        <td width="365" align="center" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
+        <td width="365" align="left" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
       
     <td align="left" valign="top" background="images/about_18.jpg">&nbsp;</td>
   
