--- a/theelmtree.html
+++ b/theelmtree.html
@@ -111,7 +111,8 @@ function MM_swapImage() { //v3.0
         <td width="30" align="left">&nbsp;</td>
         <td width="726" align="left" valign="top"><p>&nbsp;</p>
           <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
-           
+          <br /> 
+		<p class="BodyCopy"> Learn more about the Elm tree by visiting the links below. </p> 
           <p><a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!</a></p>
           <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
         <td width="34" align="left" valign="top">&nbsp;</td>
