--- a/theelmtree.html
+++ b/theelmtree.html
@@ -13,32 +13,32 @@
 <style type="text/css">
 <!--
 .style2 {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	color: #006600;
-	font-weight: bold;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #006600;
+  font-weight: bold;
 }
 .style3 {color: #F4F4F4}
 a {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	color: #630;
-	text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  color: #630;
+  text-decoration: none;
 }
 .Footer {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	color: #630;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  color: #630;
 }
 .BodyCopy {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	color: #666;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #666;
 }
 .Email {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	color: #060;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  color: #060;
 }
 -->
 </style>
@@ -112,23 +112,19 @@ function MM_swapImage() { //v3.0
       <tr>
         <td width="30" align="left">&nbsp;</td>
         <td width="726" align="left" valign="top"><p>&nbsp;</p>
-          <p><img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
-            <span class="BodyCopy"><br />
-            Minneapolis St. Paul Magazine was kind enough to feature our very own Elm Tree as a cover story.  The beautifully written and designed article is now online. <a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank">Please click here for the full story. </a></span></p>
-          <p><a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="style2">The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!</a></p>
-          <table width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td width="370" align="left" valign="top"><a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank"><img src="images/TheElmTreeFarm_MplsStPaulMagCoverage.jpg" width="370" border="0" /></a></td>
-              <td width="12" align="left" valign="top">&nbsp;</td>
-              <td align="left" valign="top"><a href="http://mspmag.com/MSPMag/ElmTree/index.html" target="_blank"><img src="images/TheElmTreeFarm_Coverage2.jpg" width="366" border="0" /></a></td>
-            </tr>
-          </table>
-          <p><img src="images/BrownDividerBar.jpg" width="725"/></p></td>
+          <p>
+            <img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
+          </p>
+          <p class="BodyCopy">
+            <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="large">
+            The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!
+            </a>
+          </p>
+        </td>
         <td width="34" align="left" valign="top">&nbsp;</td>
       </tr>
     </table>
       <table width="790" border="0" cellspacing="0" cellpadding="0">
-        
         <tr>
         <td width="45" align="left" valign="top">&nbsp;</td>
         <td width="340" align="left" valign="top"><table width="340" border="0" cellspacing="0" cellpadding="0">
@@ -138,38 +134,12 @@ function MM_swapImage() { //v3.0
           <tr>
             <td align="left" valign="top">&nbsp;</td>
           </tr>
-          <tr>
-            <td align="left" valign="top"><p>
-              <object id="flashObj" width="370" height="270" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,47,0">
-                <param name="movie" value="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" /><param name="bgcolor" value="#FFFFFF" /><param name="flashVars" value="videoId=2625439167001&playerID=1684512068001&playerKey=AQ~~,AAAACC6OgzE~,L0bTvfk9n15FmF18purmAD2hu9UP9YRL&domain=embed&dynamicStreaming=true" /><param name="base" value="http://admin.brightcove.com" /><param name="seamlesstabbing" value="false" /><param name="allowFullScreen" value="true" /><param name="swLiveConnect" value="true" /><param name="allowScriptAccess" value="always" />
-                <embed src="http://c.brightcove.com/services/viewer/federated_f9?isVid=1&isUI=1" bgcolor="#FFFFFF" flashVars="videoId=2625439167001&playerID=1684512068001&playerKey=AQ~~,AAAACC6OgzE~,L0bTvfk9n15FmF18purmAD2hu9UP9YRL&domain=embed&dynamicStreaming=true" base="http://admin.brightcove.com" name="flashObj" width="370" height="270" seamlesstabbing="false" type="application/x-shockwave-flash" allowFullScreen="true" allowScriptAccess="always" swLiveConnect="true" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></embed>
-              </object>
-            </p>
-<p>=======</p>
-              <p class="BodyCopy"><strong>Article by KIM PALMER,<a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank"> Star Tribune</a><br />
-May 5, 2009<br />
-<br />
-                <br />
-                COULD AN OLD ELM BE THE NEXT BIG THING?<br />
-                <br />
-              </strong> In the search for new disease-resistant elm species, some of the hottest prospects are homegrown.<br />
-<br />
-Over at the University of Minnesota, they're torturing baby elms in pursuit of tomorrow's shade tree -- the one you're going to want on your boulevard in a few years.</p>
-              <p class="BodyCopy">The elms are lab grown seedlings, cloned from Minnesota trees that show resistance to Dutch Elm Disease (DED). And the torture involves testing that resistance to the max. Researchers drill holes in the base, fill the holes with a lab concocted culture of Dutch Elm fungus, cover the holes with tape -- and wait.</p>
-              <p class="BodyCopy">"It's pretty effective. It kills the susceptible ones pretty quickly," said U plant pathologist Benjamin Held.</p>
-              <p class="BodyCopy">But some seedlings survive. They appear to succumb initially, wilting and dropping leaves, just like their sickly full-grown cousins, the trees that end up with blaze-orange rings painted around their trunks. But the toughest seedlings recover. Those are the elms that will undergo further testing in the field, in hopes of eventually introducing a new, Minnesota-native landscape tree that can withstand the ravages of DED.                </p>
-              <p class="BodyCopy">Disease-resistant elms are a hot topic in plant research and development circles.</p>
-              <p class="BodyCopy">"There's a lot of interest," said Chad Giblin, a U horticultural scientist. "The American elm is really important to Minnesotans. Many people grew up seeing streets lined with elms, then they were gone. People are very nostalgic about elms."</p>
-              <p class="BodyCopy">After DED wiped out entire neighborhoods of trees in the 1970s, green ash became a popular alternative. But now that a new scourge, the emerald ash borer, has been spotted near the Minnesota/Wisconsin border, the search for disease resistant shade trees has gained urgency.</p>
-              <p class="BodyCopy">"We're trending back to disease-resistant American elms," said Mark Stennes, plant pathologist/arborist for S&S Tree Specialists in St. Paul. "In terms of size, shape and grandeur, there really is no substitute for the American elm."</p>
-              <p class="Footer"><a href="http://www.startribune.com/lifestyle/homegarden/44366582.html?page=1&amp;c=y" target="_blank">To read the full article, click here. </a></p>
-<p>&nbsp;</p></td>
-          </tr>
         </table></td>
         <td width="40" align="left" valign="top">&nbsp;</td>
         <td width="365" align="right" valign="top"><p><img src="images/TheElmTreePhoto.jpg" width="365" height="360" /></p></td>
         </tr>
-  </table></td>
+  </table>
+</td>
     <td align="left" valign="top" background="images/about_18.jpg">&nbsp;</td>
   </tr>
   <tr>
