--- a/theelmtree.html
+++ b/theelmtree.html
@@ -40,6 +40,12 @@ a {
   font-size: 10px;
   color: #060;
 }
+.large {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #930;
+  text-decoration: none;
+}
 -->
 </style>
 <script type="text/javascript">
