--- a/theelmtree.html
+++ b/theelmtree.html
@@ -125,6 +125,9 @@ function MM_swapImage() { //v3.0
             <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="large">
             The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!
             </a>
+            <br>
+            Minneapolis Saint Paul Magazine wrote a beautiful article about The St. Croix Elm. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm" target="_blank" class="large">
+            Read about it here!</a> 
           </p>
         </td>
         <td width="34" align="left" valign="top">&nbsp;</td>
