--- a/theelmtree.html
+++ b/theelmtree.html
@@ -122,11 +122,10 @@ function MM_swapImage() { //v3.0
             <img src="images/TheElmTreeTitle.jpg" width="203" height="40" alt="The Elm Tree" /><br />
           </p>
           <p class="BodyCopy">
-            <a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="large">
-            The &quot;St. Croix Elm&quot; is now propagated through Bailey's Nurseries and available to order at local garden stores!
-            </a>
+            The &quot;St. Croix Elm&quot; is now propagated through<a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="large"> Bailey's Nurseries</a> and available to order at local garden stores!
             <br>
-            Minneapolis Saint Paul Magazine wrote a beautiful article about The St. Croix Elm. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm" target="_blank" class="large">
+            <br>
+            Minneapolis Saint Paul Magazine wrote a beautiful article about The St. Croix Elm. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm/" target="_blank" class="large">
             Read about it here!</a> 
           </p>
         </td>
