--- a/theelmtree.html
+++ b/theelmtree.html
@@ -125,7 +125,7 @@ function MM_swapImage() { //v3.0
             The &quot;St. Croix Elm&quot; is now propagated through<a href="http://www.firsteditionsplants.com/st-croix-american-elm" target="_blank" class="large"> Bailey's Nurseries</a> and available to order at local garden stores!
             <br>
             <br>
-            Minneapolis Saint Paul Magazine wrote a beautiful article about The St. Croix Elm. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm/" target="_blank" class="large">
+            Minneapolis Saint Paul Magazine was kind enough to feature a beautiful article about The St. Croix Elm the discovery of its disease resistance. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm/" target="_blank" class="large">
             Read about it here!</a> 
           </p>
         </td>
