--- a/theelmtree.html
+++ b/theelmtree.html
@@ -127,6 +127,9 @@ function MM_swapImage() { //v3.0
             <br>
             Minneapolis Saint Paul Magazine was kind enough to feature a beautiful article about The St. Croix Elm the discovery of its disease resistance. <a href="http://mspmag.com/arts-and-culture/general-interest/the-st-croix-elm/" target="_blank" class="large">
             Read about it here!</a> 
+          <br>
+          <br> 
+            The Elm Tree was also featured in the Star Tribune article <a href="http://www.startribune.com/disease-resistant-st-croix-elm-making-its-way-to-twin-cities-garden-centers/305035841/" target="_blank" class="large"> Disease Resistant St. Croix Elm Making its Way to Twin Cities Garden Centers</a> 
           </p>
         </td>
         <td width="34" align="left" valign="top">&nbsp;</td>
