--- a/contact.html
+++ b/contact.html
@@ -153,13 +153,45 @@ Elm Tree Farm is located in Afton, Minnesota. If you'd like to visit, or learn m
               <p class="BodyCopy">We like to sell our produce close to home. If you are a food buyer for a restaurant, grocery store, institutional food service, distributor, or any other organization on the market for local, organic food, we are interested in partnering with you.              </span>
               <p><span class="BodyCopy"><strong>If you would like to be added to our contact list, please fill in the fields below:</strong></span></p></p>
               <div>
-              <!-- 123ContactForm.com script begins here -->
-<iframe style="height:400px; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="http://www.123contactform.com/my-contact-form-ElmTreeFarm-424161.html">
-<p>Your browser does not support iframes. The contact form cannot be displayed. Please use another contact method (phone, fax etc)</p>
-</iframe>
-
-<p><a class="footerLink13" href="http://www.123contactform.com" title="Html form">Html form</a> <span class="Footer">powered by 123ContactForm.com</span> | <a class="footerLink13" title="Looks like phishing? Report it!" href="http://www.123contactform.com/sf.php?s=123contactform-52&control119314=http://www.123contactform.com/contact-form--424161.html&control190=Report%20abuse" rel="nofollow">Report abuse</a></p><!-- 123ContactForm.com script ends here -->
-
+              <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//theelmtreefarm.us8.list-manage.com/subscribe/post?u=d1da1c15e49296978ab460af8&amp;id=156a23f2a0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Subscribe to The Elm Tree Farm News</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+	<label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+</label>
+	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d1da1c15e49296978ab460af8_156a23f2a0" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+		      
               </div>
               </td>
           </tr>
